OB-57-자유게시판-첨부파일-기능-다운로드-기능-추가

--- a/src/main/resources/templates/board/modifyContentForm.html
+++ b/src/main/resources/templates/board/modifyContentForm.html
@@ -41,6 +41,7 @@
         <hr>
         <br>
         <textarea id="editor" name="content" th:text="${boardDto.content}"></textarea>
+        <input type="file" name="board_attach_file" placeholder="SELECT IMAGE FILE">
         <div class="button-container">
           <input type="submit" value="Modify" onclick="modifyContentConfirm()">
           <input type="submit" value="Delete" onclick="deleteContentConfirm()">
