--- a/src/main/resources/templates/include/student/updatePasswordFormJs.html
+++ b/src/main/resources/templates/include/student/updatePasswordFormJs.html
@@ -38,16 +38,8 @@
           alert("비밀번호와 새 비밀번호가 다릅니다!");
           form.newPassword.focus();
       } else {
-          isCurrentPassword = ajax_currentPasswordCheck(form.no.value, form.currentPassword.value, form.isStudent.value);
-          if(isCurrentPassword){
-              form.submit();
-          } else{
-              console.log(isCurrentPassword);
-              form.currentPassword.value = null;
-              form.newPassword.value = null;
-              form.newPasswordAgain.value = null;
-              alert("현재 비밀번호가 맞지 않습니다!");
-          }
+          ajax_currentPasswordCheck(form.no.value, form.currentPassword.value, form.isStudent.value);
+
       }
 
 
@@ -73,16 +65,22 @@ function ajax_currentPasswordCheck(no, currentPassword, isStudent){
         data: JSON.stringify(msgDto),
         contentType: 'application/json; charset=utf-8',
         dataType: 'json',
-        async: false,
         success: function(data) {
             console.log('AJAX SUCCESS - ajax_currentPasswordCheck()');
 
-            console.log(typeof(data.check));
-            result = data.check;
-            return result;
+            if(data.check){
+                document.updatePasswordForm.submit();
+            } else{
+                let form = document.updatePasswordForm;
+                form.currentPassword.value = null;
+                form.newPassword.value = null;
+                form.newPasswordAgain.value = null;
+                alert("현재 비밀번호가 맞지 않습니다!");
+            }
         },
         error: function(data) {
             console.log('AJAX ERROR - ajax_currentPasswordCheck()');
+            alert("통신 에러입니다 다시 시도해주세요");
         }
     });
 
