OB-59-아이디-비밀번호-찾기

--- a/src/main/resources/templates/include/findPasswordFormJs.html
+++ b/src/main/resources/templates/include/findPasswordFormJs.html
@@ -13,7 +13,7 @@
     function initEvent() {
         console.log("init CALLED!!!");
 
-        $("#sectionWrap div.findIDForm input:radio[name='student']").on('click', function () {
+        $("#sectionWrap div.findPasswordForm input:radio[name='student']").on('click', function () {
             console.log("student CLICK HANDLER!!!");
 
             $("input:radio[name='student']").prop('checked', true);
@@ -22,7 +22,7 @@
             isStudent = 1;
         });
 
-        $("#sectionWrap div.findIDForm input:radio[name='parents']").on('click', function () {
+        $("#sectionWrap div.findPasswordForm input:radio[name='parents']").on('click', function () {
             console.log("parents CLICK HANDLER!!!");
 
             $("input:radio[name='student']").prop('checked', false);
@@ -31,13 +31,16 @@
             isStudent = 0;
         });
 
-        $("#sectionWrap div.findIDForm input[value='인증번호 발송']").on('click', function () {
+        $("#sectionWrap div.findPasswordForm input[value='인증번호 발송']").on('click', function () {
             console.log("인증번호 발송 CLICK HANDLER!!!");
 
-            let form = document.findIDForm;
+            let form = document.findPasswordForm;
             if (form.name.value == '') {
                 alert("이름을 입력해주세요!");
                 form.name.focus();
+            } else if (form.id.value == '') {
+                alert("아이디를 입력해주세요!");
+                form.id.focus();
             } else if (form.phone1.value == '') {
                 alert("핸드폰을 입력해주세요!");
                 form.phone1.focus();
@@ -54,12 +57,11 @@
 
         });
 
-        $("#sectionWrap div.findIDForm input[value='아이디 찾기']").on('click', function () {
-            console.log("아이디 찾기 CLICK HANDLER!!!");
+        $("#sectionWrap div.findPasswordForm input[value='비밀번호 찾기']").on('click', function () {
+            console.log("비밀번호 찾기 CLICK HANDLER!!!");
 
-            findIDConfirm();
+            findPasswordConfirm();
         });
-
 
     }
 
@@ -98,13 +100,16 @@
     }
 
     // 아이디 찾기
-    function findIDConfirm() {
-        console.log("findIDConfirm() CALLED!!!");
+    function findPasswordConfirm() {
+        console.log("findPasswordConfirm() CALLED!!!");
 
-        let form = document.findIDForm;
+        let form = document.findPasswordForm;
         if (form.name.value == '') {
             alert("이름을 입력해주세요!");
             form.name.focus();
+        } else if (form.id.value == '') {
+            alert("아이디를 입력해주세요!");
+            form.id.focus();
         } else if (form.phone1.value == '') {
             alert("핸드폰을 입력해주세요!");
             form.phone1.focus();
@@ -123,13 +128,15 @@
 
     }
 
+
     // AJAX START
     function ajax_sendAuthenticationMessage() {
         console.log("ajax_sendAuthenticationMessage() CALLED!!!");
 
-        let form = document.findIDForm;
+        let form = document.findPasswordForm;
         let formData = new FormData();
         formData.append("name", form.name.value);
+        formData.append("id", form.id.value);
         formData.append("to", form.phone1.value + form.phone2.value + form.phone3.value);
         formData.append("isStudent", isStudent);
 
@@ -141,13 +148,15 @@
             processData: false,
             success: function (data) {
                 console.log('AJAX SUCCESS - ajax_sendAuthenticationMessage()');
+
                 if (data == '1') {
                     alert("입력한 정보가 올바르지 않습니다!");
+                    clearInterval(timer);
+                    isRunning = false;
                 } else {
                     $("span.authInput").children().remove();
                     let appendTag = "";
                     appendTag += '<br><input type="text" name="auth_no" placeholder="인증번호를 입력해주세요">';
-
                     $("span.authInput").append(appendTag);
                 }
 
@@ -160,9 +169,10 @@
 
     function ajax_matchAuthentication() {
         console.log("ajax_matchAuthentication() CALLED!!!");
-        let form = document.findIDForm;
+        let form = document.findPasswordForm;
         let formData = new FormData;
         formData.append("name", form.name.value);
+        formData.append("id", form.id.value);
         formData.append("to", form.phone1.value + form.phone2.value + form.phone3.value);
         formData.append("content", form.auth_no.value);
         formData.append("isStudent", isStudent);
@@ -176,15 +186,11 @@
             success: function (data) {
                 console.log('AJAX SUCCESS - ajax_matchAuthentication()');
 
-                console.log(data);
-
-
                 if (data.result) {
-                    ajax_sendMessage(data.id);
+                    ajax_sendTempPasswordMessage();
                 } else {
                     alert("인증번호가 맞지 않습니다!");
                 }
-
 
             },
             error: function (data) {
@@ -193,15 +199,16 @@
         });
     }
 
-    function ajax_sendMessage(id) {
-        console.log("ajax_sendMessage() CALLED!!!");
+    function ajax_sendTempPasswordMessage() {
+        console.log("ajax_sendTempPasswordMessage() CALLED!!!");
 
-        let form = document.findIDForm;
+        let form = document.findPasswordForm;
         let formData = new FormData();
         formData.append("name", form.name.value);
         formData.append("to", form.phone1.value + form.phone2.value + form.phone3.value);
         formData.append("isStudent", isStudent);
-        formData.append("content", id);
+        formData.append("id", form.id.value);
+        formData.append("content", null);
 
         $.ajax({
             url: '/sms/sendMessage',
@@ -213,10 +220,10 @@
                 console.log('AJAX SUCCESS - ajax_sendMessage()');
 
                 if (data.statusCode == '202') {
-                    alert("아이디를 문자로 전송하였습니다.");
+                    alert("임시 비밀번호를 문자로 전송하였습니다.");
                     location.href = "/user/member/loginForm";
                 } else {
-                    alert("아이디 문자 전송에 실패하였습니다.");
+                    alert("임시 비밀번호 문자 전송에 실패하였습니다.");
                 }
 
             },
@@ -228,9 +235,10 @@
 
     function ajax_invalidateAuthenticationNumber() {
         console.log("ajax_invalidateAuthenticationNumber() CALLED!!!");
-        let form = document.findIDForm;
+        let form = document.findPasswordForm;
         let formData = new FormData;
         formData.append("name", form.name.value);
+        formData.append("id", form.id.value);
         formData.append("to", form.phone1.value + form.phone2.value + form.phone3.value);
         formData.append("isStudent", isStudent);
 
