--- a/src/main/resources/templates/user/member/findPasswordForm.html
+++ b/src/main/resources/templates/user/member/findPasswordForm.html
@@ -5,7 +5,7 @@
 
     </title>
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/findIDFormJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{/include/findPasswordFormJs.html::js}" type="text/javascript"></script>
 
 
 </head>
@@ -22,14 +22,16 @@
 <section>
     <div id="sectionWrap">
         <div class="word">
-            아이디 찾기
+            비밀번호 찾기
         </div>
-        <div class="findIDForm">
-            <form th:action="@{/user/member/findIDConfirm}" method="post" name="findIDForm">
+        <div class="findPasswordForm">
+            <form th:action="@{/user/member/findPasswordConfirm}" method="POST" name="findPasswordForm">
                 <label><input type="radio" name="student" value="학생" checked="checked">학생</label>&nbsp;
                 <label><input type="radio" name="parents" value="학부모">학부모</label><br>
                 이름
                 <input type="text" name="name" placeholder="이름을 입력하세요"><br>
+                아이디
+                <input type="text" name="id" placeholder="아이디를 입력하세요"><br>
                 핸드폰 번호
                 <select name="phone1">
                     <option value="">---선택해주세요---</option>
@@ -43,7 +45,7 @@
                 <input type="button" value="인증번호 발송">
                 <span class="authInput"></span>
                 <span id="timer"></span><br>
-                <input type="button" value="아이디 찾기">
+                <input type="button" value="비밀번호 찾기">
                 <input type="reset" value="reset">
             </form>
         </div>
