--- a/src/main/resources/templates/user/member/updatePasswordForm.html
+++ b/src/main/resources/templates/user/member/updatePasswordForm.html
@@ -22,7 +22,7 @@
 <section>
     <div id = "sectionWrap">
         <div class="word">
-            비밀번호 수정
+            비밀번호 찾기
         </div>
         <div class = "updatePasswordForm">
             <form th:action="@{/user/member/updatePasswordConfirm}" method="post" id = "updatePasswordForm" name = "updatePasswordForm">
