--- a/src/main/resources/templates/user/member/updatePasswordFormForFindPassword.html
+++ b/src/main/resources/templates/user/member/updatePasswordFormForFindPassword.html
@@ -5,7 +5,7 @@
 
     </title>
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/student/updatePasswordFormJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{/include/student/updatePasswordFormForFindPasswordJs.html::js}" type="text/javascript"></script>
 
 
 </head>
@@ -27,7 +27,7 @@
         <div class = "updatePasswordForm">
             <form th:action="@{/user/member/updatePasswordConfirm}" method="post" id = "updatePasswordForm" name = "updatePasswordForm">
                 <input type = "hidden" name = "isStudent" th:value="${isStudent}">
-                <input type = "hidden" name = "no" th:value="${no}">
+                <input type = "hidden" name = "id" th:value="${no}">
                 <input type = "password" name = "currentPassword" placeholder="현재 비밀번호"><br>
                 <input type = "password" name = "newPassword" placeholder="새 비밀번호"><br>
                 <input type = "password" name = "newPasswordAgain" placeholder="새 비밀번호 확인"><br>
