OB-62-첨부파일을-포함한-게시글-수정기능-추가-css작업-일부-추가

--- a/src/main/resources/templates/board/detailContentForm.html
+++ b/src/main/resources/templates/board/detailContentForm.html
@@ -61,7 +61,7 @@
           </ul>
         </div>
         <div class="button-container">
-          <input type="submit" value="수정">
+          <input type="submit" value="수정" th:if="${session.loginedStudentDto.no==boardAndReplyMap.boardDto.student_no}">
           <input type="submit" value="삭제" onclick="deleteContentConfirm()">
           <input type="button" value="취소" onclick="location.href='/board/freeBoardListForm';">
         </div>
