--- a/src/main/resources/templates/board/modifyContentForm.html
+++ b/src/main/resources/templates/board/modifyContentForm.html
@@ -23,9 +23,14 @@
     </div>
 
     <div class="content_list">
-      <form th:action="@{/board/modifyContentConfirm}" th:object="${postForm}" name="modifyContentForm" method="post">
-        <input type="hidden" name="board_no" th:value="${boardAndReplyMap.boardDto.no}">
+      <form th:action="@{/board/modifyContentConfirm}"
+            th:object="${postForm}"
+            name="modifyContentForm"
+            method="post"
+            enctype="multipart/form-data">
+        <input type="hidden" name="no" th:value="${boardAndReplyMap.boardDto.no}">
         <input type="hidden" name="student_no" th:value="${boardAndReplyMap.boardDto.student_no}">
+        <input type="hidden" name="category_no" th:value="${boardAndReplyMap.boardDto.category_no}">
         <input type="hidden" name="mod_date" th:value="${boardAndReplyMap.boardDto.mod_date}">
 <!--        <input type="hidden" name="no" th:value="${boardDto.no}">-->
         <span>글번호</span> &nbsp;
@@ -65,6 +70,7 @@
         </div>
         <script>
           var maxFiles = 5; // 최대 첨부 파일 개수
+          var maxFileSize = 25600000; // 최대 파일 크기 (25MB)
           var selectedFiles = []; // 선택한 파일 목록
           var fileInput = document.getElementById("fileInput");
           var uploadFileList = document.getElementById("uploadFileList");
@@ -75,10 +81,18 @@
             selectedFiles = [];
             for (var i = 0; i < fileInput.files.length; i++) {
               var file = fileInput.files[i];
+              // 최대 업로드 파일 개수 확인
               if (selectedFiles.length >= maxFiles) {
                 alert("최대 " + maxFiles + "개의 파일까지 첨부할 수 있습니다.");
                 fileInput.value = ""; // 파일 선택 초기화
                 uploadFileList.replaceChildren();
+                return;
+              }
+              // 업로드 파일 용량 확인
+              if (file.size > maxFileSize) {
+                alert("파일 크기는 " + formatBytes(maxFileSize) + "를 초과할 수 없습니다.");
+                fileInput.value = ""; // 파일 선택 초기화
+                fileInfo.replaceChildren();
                 return;
               }
               selectedFiles.push(file);
