--- a/src/main/resources/templates/board/freeBoardListForm.html
+++ b/src/main/resources/templates/board/freeBoardListForm.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+
+    <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
+    <script th:replace="~{/include/listJs.html::js}" type="text/javascript"></script>
 </head>
 <body>
 
@@ -19,8 +22,8 @@
                         <option value='2'>내용으로 검색</option>
                         <option value='3'>작성자로 검색</option>
                     </select>
-                    <input type="text" name="search_word">&nbsp;&nbsp;
-                    <input type="button" value="search">
+<!--                    <input type="text" id="keyword" name="keyword" placeholder="키워드를 입력해 주세요." title="키워드 입력" />-->
+<!--                    <button type="button" class="bt_search" onclick="movePage(1);"><i class="fas fa-search"></i><span class="skip_info">검색</span></button>-->
                 </div>
             </form>
 
@@ -49,10 +52,27 @@
                         </tr>
                         </tbody>
                     </table>
-                    <br>
+                    <!-- LIST END -->
+
+                    <br><br><br>
+
                     <input type="button" value="write" onclick="location.href='/board/writeContentForm';">&nbsp;&nbsp;
                 </form>
             </div>
+                    <!-- PAGENATION START -->
+            <div class="page_wrap">
+
+                <div class="page_number">
+
+                </div>
+
+                <div class="page_goto">
+                    <input type="number" name="page_target_num">&nbsp; &#47; <span class="page_total_num"></span>
+                    <a class="goto_page_btn" href="#none">Go to page</a>
+                </div>
+
+            </div>
+                    <!-- PAGENATION END -->
         </div>
     </section>
 
