--- a/src/main/resources/templates/user/parents/createAccountForm.html
+++ b/src/main/resources/templates/user/parents/createAccountForm.html
@@ -5,7 +5,7 @@
 
     </title>
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
-    <script th:replace="~{/include/member/createAccountFormJs.html::js}" type="text/javascript"></script>
+    <script th:replace="~{/include/parents/createAccountFormJs.html::js}" type="text/javascript"></script>
 
 </head>
 <body>
@@ -56,12 +56,13 @@
                 주소<input type="text" id="address" name="address" placeholder="주소"><br>
                 <input type="text" id="detailAddress" name="address_detail1" placeholder="상세주소를 입력하세요."><br>
                 <input type="text" id="extraAddress" name="address_detail2" placeholder="참고항목"><br>
-                학교 이름 &nbsp;
-                <select name = "school_name">
+                학교 이름
+                <input type="text" name = "school_search" placeholder="학교 검색"> &nbsp;
+                <input type="button" value="검색"><br>
+                <select name = "school_no">
                     <option value="">---선택해주세요----</option>
-                    <option value="덕문여자고등학교">덕문여자고등학교</option>
-                    <option value="창원남고등학교">창원남고등학교</option>
-                </select><br>
+                </select>
+                <input type="hidden"name="school_name"><br>
                 학년 &nbsp;
                 <select name = "grade">
                     <option value="">---선택해주세요----</option>
@@ -72,17 +73,10 @@
                 반 &nbsp;
                 <select name = "class_no">
                     <option value="">---선택해주세요----</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
                 </select><br>
                 학생 이름
                 <select name = "student_no">
                     <option value="">---선택해주세요----</option>
-                    <option value="1">김란희</option>
-                    <option value="2">김장훈</option>
-                    <option value="3">안지수</option>
                 </select><br>
                 학생과의 관계
                 <select name = "relation">
