--- a/src/main/resources/templates/user/student/createAccountForm.html
+++ b/src/main/resources/templates/user/student/createAccountForm.html
@@ -27,7 +27,7 @@
         <div class = "createAccountForm">
             <form th:action = "@{/user/student/createAccountConfirm}" method="post" name = "createAccountForm">
                 <input type = "text" name = "id" placeholder="아이디">
-                <input type = "button" id = "duplicationCheck" value = "아이디 중복 체크"><br>
+                <input type = "button" id = "checkDuplication" value = "아이디 중복 체크"><br>
                 <p id="duplicationResult"></p>
                 <input type = "password" name = "password" placeholder="비밀번호"><br>
                 <input type = "password" name = "password_again" placeholder="비밀번호 확인"><br>
@@ -57,12 +57,13 @@
                 주소<input type="text" id="address" name="address" placeholder="주소"><br>
                 <input type="text" id="detailAddress" name="address_detail1" placeholder="상세주소를 입력하세요."><br>
                 <input type="text" id="extraAddress" name="address_detail2" placeholder="참고항목"><br>
-                학교 이름 &nbsp;
-                <select name = "school_name">
+                학교 이름
+                <input type="text" name = "school_search" placeholder="학교 검색"> &nbsp;
+                <input type="button" value="검색"><br>
+                <select name = "school_no">
                     <option value="">---선택해주세요----</option>
-                    <option value="덕문여자고등학교">덕문여자고등학교</option>
-                    <option value="창원남고등학교">창원남고등학교</option>
-                </select><br>
+                </select>
+                <input type="hidden"name="school_name"><br>
                 성별 &nbsp;
                 <select name = "gender">
                     <option value="">---선택해주세요----</option>
