--- a/src/main/resources/templates/include/parents/createAccountFormJs.html
+++ b/src/main/resources/templates/include/parents/createAccountFormJs.html
@@ -1,161 +1,164 @@
 <script th:fragment="js" type="text/javascript">
 
-    let idDuplicationCheck = false;
+    let checkIdDuplication = false;
 
-  $(document).ready(function() {
-    console.log('DOCUMENT READY!!');
+    $(document).ready(function () {
+        console.log('DOCUMENT READY!!');
 
-    initEvent();
+        initEvent();
 
-  });
+    });
 
-  function initEvent() {
-    console.log("initEvent() CALLED!!!");
+    function initEvent() {
+        console.log("initEvent() CALLED!!!");
 
-      let form = document.createAccountForm;
+        let form = document.createAccountForm;
 
-      $("#checkDuplication").on('click', function () {
-          console.log("checkDuplication() CLICK HANDLER CALLED!!!");
+        $("#checkDuplication").on('click', function () {
+            console.log("checkDuplication() CLICK HANDLER CALLED!!!");
 
-          let form = document.createAccountForm;
-          if (form.id.value == '') {
-              alert("아이디를 입력해주세요!");
-              form.id.focus();
-          } else {
-              let id = form.id.value;
+            let form = document.createAccountForm;
+            if (form.id.value == '') {
+                alert("아이디를 입력해주세요!");
+                form.id.focus();
+            } else {
+                let id = form.id.value;
 
-              ajax_checkIdDuplication(id);
-          }
+                ajax_checkIdDuplication(id);
+            }
 
-      });
-      $("form input[value ='검색']").on('click', function () {
-          console.log("검색 CLICK HANDLER CALLED!!!");
-          ajax_searchSchoolName(document.createAccountForm.school_search.value);
+        });
+        $("form input[value ='검색']").on('click', function () {
+            console.log("검색 CLICK HANDLER CALLED!!!");
+            ajax_searchSchoolName(document.createAccountForm.school_search.value);
 
-      });
-      $("form select[name ='school_no']").on('change', function () {
-          console.log("school_no CHANGE HANDLER CALLED!!!");
-          form.school_name.value = $(this).find("option:selected").data("school_name");
-          ajax_searchStudent(form.school_name.value, form.grade.value, form.class_no.value);
-      });
-      $("form select[name ='grade']").on('change', function () {
-          console.log("grade CHANGE HANDLER CALLED!!!");
-          ajax_searchStudent(form.school_name.value, form.grade.value, form.class_no.value);
-      });
-      $("form select[name ='class_no']").on('change', function () {
-          console.log("class_no CHANGE HANDLER CALLED!!!");
-          ajax_searchStudent(form.school_name.value, form.grade.value, form.class_no.value);
-      });
-  }
+        });
+        $("form select[name ='school_no']").on('change', function () {
+            console.log("school_no CHANGE HANDLER CALLED!!!");
+            form.school_name.value = $(this).find("option:selected").data("school_name");
+            ajax_searchStudent(form.school_name.value, form.grade.value, form.class_no.value);
+        });
+        $("form select[name ='grade']").on('change', function () {
+            console.log("grade CHANGE HANDLER CALLED!!!");
+            ajax_searchStudent(form.school_name.value, form.grade.value, form.class_no.value);
+        });
+        $("form select[name ='class_no']").on('change', function () {
+            console.log("class_no CHANGE HANDLER CALLED!!!");
+            ajax_searchStudent(form.school_name.value, form.grade.value, form.class_no.value);
+        });
+    }
 
-  function filterKey(){
+    function filterKey() {
         console.log("filterKey() CALLED!!!");
 
         let filterNum = $(this).value.replace(/[^0-9.]/g, '').replace(/(\..*)\./g, '$1');
         $(this).val(filterNum);
-  }
-
-  function createAccountConfirm() {
-    console.log("createAccountConfirm() CALLED!!!");
-
-    let form = document.createAccountForm;
-
-    if(form.id.value == ''){
-      alert("아이디를 입력해주세요!");
-      form.id.focus();
-    } else if(form.password.value == ''){
-      alert("비밀번호를 입력해주세요!");
-      form.password.focus();
-    } else if(form.password_again.value == ''){
-      alert("비밀번호 확인을 다시 입력해주세요!");
-      form.password_again.focus();
-    } else if(form.password.value != form.password_again.value){
-      alert("비밀번호와 비밀번호 확인이 맞지 않습니다.");
-      form.password.focus();
-    } else if(form.name.value == ''){
-      alert("이름을 입력해주세요!");
-      form.name.focus();
-    } else if(form.phone1.value == ''){
-      alert("핸드폰 번호를 입력해주세요!");
-      form.phone1.focus();
-    } else if(form.phone2.value == ''){
-      alert("핸드폰 번호를 입력해주세요!");
-      form.phone2.focus();
-    } else if(form.phone3.value == ''){
-      alert("핸드폰 번호를 입력해주세요!");
-      form.phone3.focus();
-    } else if(form.mail1.value == ''){
-      alert("메일을 입력해주세요!");
-      form.mail1.focus();
-    } else if(form.mail2.value == ''){
-      alert("도메인을 입력해주세요!");
-      form.mail2.focus();
-    } else if(form.school_name.value == ''){
-      alert("학교 이름을 선택해주세요!");
-      form.school_name.focus();
-    } else if(form.grade.value == ''){
-      alert("학년을 선택해주세요!");
-      form.grade.focus();
-    } else if(form.class_no.value == ''){
-      alert("반을 입력해주세요!");
-      form.class_no.focus();
-    } else if(form.zip_code.value == ''){
-      alert("우편번호를 입력해주세요!");
-      form.zip_code.focus();
-    } else if(form.address.value == ''){
-      alert("주소를 입력해주세요!");
-      form.address.focus();
-    } else if(form.address_detail1.value == ''){
-      alert("주소를 입력해주세요!");
-      form.address.focus();
-    } else if(!idDuplicationCheck){
-      alert("아이디 중복체크를 해주세요!");
-    } else {
-      form.phone.value = (form.phone1.value + form.phone2.value + form.phone3.value);
-      form.mail.value =(form.mail1.value + '@'+ form.mail2.value);
-
-      form.submit();
     }
 
-  }
+    function createAccountConfirm() {
+        console.log("createAccountConfirm() CALLED!!!");
+
+        let form = document.createAccountForm;
+
+        if (form.id.value == '') {
+            alert("아이디를 입력해주세요!");
+            form.id.focus();
+        } else if (form.password.value == '') {
+            alert("비밀번호를 입력해주세요!");
+            form.password.focus();
+        } else if (form.password_again.value == '') {
+            alert("비밀번호 확인을 다시 입력해주세요!");
+            form.password_again.focus();
+        } else if (form.password.value != form.password_again.value) {
+            alert("비밀번호와 비밀번호 확인이 맞지 않습니다.");
+            form.password.focus();
+        } else if (form.name.value == '') {
+            alert("이름을 입력해주세요!");
+            form.name.focus();
+        } else if (form.phone1.value == '') {
+            alert("핸드폰 번호를 입력해주세요!");
+            form.phone1.focus();
+        } else if (form.phone2.value == '') {
+            alert("핸드폰 번호를 입력해주세요!");
+            form.phone2.focus();
+        } else if (form.phone3.value == '') {
+            alert("핸드폰 번호를 입력해주세요!");
+            form.phone3.focus();
+        } else if (form.mail1.value == '') {
+            alert("메일을 입력해주세요!");
+            form.mail1.focus();
+        } else if (form.mail2.value == '') {
+            alert("도메인을 입력해주세요!");
+            form.mail2.focus();
+        } else if (form.school_name.value == '') {
+            alert("학교 이름을 선택해주세요!");
+            form.school_name.focus();
+        } else if (form.grade.value == '') {
+            alert("학년을 선택해주세요!");
+            form.grade.focus();
+        } else if (form.class_no.value == '') {
+            alert("반을 입력해주세요!");
+            form.class_no.focus();
+        } else if (form.student_no.value == '') {
+            alert("학생 이름을 입력해주세요!");
+            form.student_no.focus();
+        } else if (form.zip_code.value == '') {
+            alert("우편번호를 입력해주세요!");
+            form.zip_code.focus();
+        } else if (form.address.value == '') {
+            alert("주소를 입력해주세요!");
+            form.address.focus();
+        } else if (form.address_detail1.value == '') {
+            alert("주소를 입력해주세요!");
+            form.address.focus();
+        } else if (!checkIdDuplication) {
+            alert("아이디 중복체크를 해주세요!");
+        } else {
+            form.phone.value = (form.phone1.value + form.phone2.value + form.phone3.value);
+            form.mail.value = (form.mail1.value + '@' + form.mail2.value);
+
+            form.submit();
+        }
+
+    }
 
 
-  // AJAX START
+    // AJAX START
 
-  function ajax_checkIdDuplication(id){
-      console.log("ajax_checkIdDuplication() CALLED!!!");
-      msgDto = {
-          'id': id,
-      }
+    function ajax_checkIdDuplication(id) {
+        console.log("ajax_checkIdDuplication() CALLED!!!");
+        msgDto = {
+            'id': id,
+        }
 
-      $.ajax({
-          url: '/user/member/checkIdDuplication',
-          type: 'GET',
-          data: msgDto,
-          contentType: 'application/json; charset=utf-8',
-          dataType: 'json',
-          success: function (data) {
-              console.log('AJAX SUCCESS - ajax_checkIdDuplication()');
+        $.ajax({
+            url: '/user/member/checkIdDuplication',
+            type: 'GET',
+            data: msgDto,
+            contentType: 'application/json; charset=utf-8',
+            dataType: 'json',
+            success: function (data) {
+                console.log('AJAX SUCCESS - ajax_checkIdDuplication()');
 
-              let isDuplicateID = data.isDuplicateID;
-              $("#duplicationResult").children().remove();
-              let appendTag = "<span>";
-              if (isDuplicateID) {
-                  appendTag += "아이디가 중복입니다.";
-              } else {
-                  appendTag += "사용가능한 아이디입니다.";
-                  checkIdDuplication = true;
-              }
-              appendTag += "</span>";
+                let isDuplicateID = data.isDuplicateID;
+                $("#duplicationResult").children().remove();
+                let appendTag = "<span>";
+                if (isDuplicateID) {
+                    appendTag += "아이디가 중복입니다.";
+                } else {
+                    appendTag += "사용가능한 아이디입니다.";
+                    checkIdDuplication = true;
+                }
+                appendTag += "</span>";
 
-              $("#duplicationResult").append(appendTag);
+                $("#duplicationResult").append(appendTag);
 
-          },
-          error: function (data) {
-              console.log('AJAX ERROR - ajax_checkIdDuplication()');
-          }
-      });
-  }
+            },
+            error: function (data) {
+                console.log('AJAX ERROR - ajax_checkIdDuplication()');
+            }
+        });
+    }
 
 
     function ajax_searchSchoolName(name) {
@@ -178,8 +181,8 @@
                 $('div.createAccountForm select[name = "school_no"]').children().remove();
                 $('div.createAccountForm select[name = "school_no"]').append("<option value=' '>---선택해주세요---</option>");
                 let appendTag = "";
-                for(let i = 0; i < schoolDtos.length; i++){
-                    appendTag += "<option value="+ schoolDtos[i].school_code + " data-school_name ="+ schoolDtos[i].school_name+ ">" + schoolDtos[i].school_name + "</option>";
+                for (let i = 0; i < schoolDtos.length; i++) {
+                    appendTag += "<option value=" + schoolDtos[i].school_code + " data-school_name =" + schoolDtos[i].school_name + ">" + schoolDtos[i].school_name + "</option>";
                 }
                 $('div.createAccountForm select[name = "school_no"]').append(appendTag);
 
@@ -190,17 +193,25 @@
         });
 
     }
+
     function ajax_searchStudent(school_name, grade, class_no) {
         console.log("ajax_searchStudent() CALLED!!!");
-
         msgDto = {
             'school_name': school_name,
-            'grade': grade,
-            'class_no': class_no,
+        }
+        if (grade != "") {
+            msgDto.grade = grade;
+        } else {
+            msgDto.grade = -1;
+        }
+        if (class_no != "") {
+            msgDto.class_no = class_no;
+        } else {
+            msgDto.class_no = -1;
         }
 
         $.ajax({
-            url: '/user/parents/searchStudent',
+            url: '/user/parents/searchStudents',
             type: 'GET',
             data: msgDto,
             contentType: 'application/json; charset=utf-8',
@@ -208,6 +219,16 @@
             success: function (data) {
                 console.log('AJAX SUCCESS - ajax_searchStudent()');
 
+                let studentDtos = data.studentDtos;
+
+                let appendTag = "";
+                appendTag += "<option value=''>---선택해주세요----</option>";
+                for (let i = 0; i < studentDtos.length; i++) {
+                    appendTag += "<option value=" + studentDtos[i].no + ">" + studentDtos[i].no + "번 " + studentDtos[i].name + "</option>";
+                }
+
+                $("form select[name = 'student_no']").children().remove();
+                $("form select[name = 'student_no']").append(appendTag);
 
             },
             error: function (data) {
