--- a/src/main/resources/templates/include/member/loginFormJs.html
+++ b/src/main/resources/templates/include/member/loginFormJs.html
@@ -30,7 +30,7 @@
         isStudent = false;
     });
 
-    $("#sectionWrap div.loginForm input[value='login']").on('click', function (){
+    $("#sectionWrap div.loginForm input[value='로그인']").on('click', function (){
         console.log("login CLICK HANDLER!!!");
         loginConfirm(isStudent);
     });
