--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -20,10 +20,9 @@
         </div>
         <form th:action="@{/user/student/loginConfirm}" method="post" id = "loginForm" name = "loginForm">
             <div class = "loginForm">
-<!--                <ul>-->
-<!--                    <li>학생 로그인</li>-->
-<!--                    <li>학부모 로그인</li>-->
-<!--                </ul>-->
+                <div class="loginConfirmResult">
+
+                </div>
                 <span><label><input type="radio" name="student" value="학생" checked="checked">학생</label></span>
                 <span><label><input type="radio" name="parents" value="학부모" >학부모</label><br></span>
                 <input type = "text" name = "id" placeholder="아이디"><br>
@@ -35,9 +34,9 @@
             <div class="findMember">
                 <a href="#none">회원가입</a>
                 |
-                <a href="#none">아이디 찾기</a>
+                <a th:href="@{/user/member/findIDForm}">아이디 찾기</a>
                 |
-                <a href="#none">비밀번호 찾기</a>
+                <a th:href="@{/user/member/findPasswordForm}">비밀번호 찾기</a>
             </div>
         </form>
     </div>
