OB-68-게시판-학부모-접근-권한-설정

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -60,6 +60,7 @@
                     <a th:href="@{/user/parents/modifyAccountForm}">회원 수정</a>
                     <a th:href="@{/user/parents/logoutConfirm}">로그아웃</a>
                 </div>
+                <a th:href="@{/notice/noticeListForm}">공지사항</a>
                 <a th:href="@{/board/freeBoardListForm}">자유 게시판</a>
                 <a th:href="@{/board/writeContentForm}">게시판 작성</a>
             </div>
