OB-72-학생-매점-키오스크-형식의-기능-및-검색-기능-추가

--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -62,7 +62,17 @@
                 </div>
                 <a th:href="@{/board/freeBoardListForm}">자유 게시판</a>
                 <a th:href="@{/board/writeContentForm}">게시판 작성</a>
+
+                <!-- Student Product 관련 추가 -->
+                <div class="wrap">
+                    <a th:href="@{/product/mySchoolProductForm}">우리 학교 매점</a>
+                </div>
+                <div class="wrap">
+                    <a th:href="@{/product/paymentHistory}">결제 내역</a>
+                </div>
             </div>
+
+
         </div>
     </section>
 <!--    <div class="wrap" th:if="${session.loginedStudentDto == null}">-->
