OB-74-CK-에디터-필요-기능-수정-및-이미지-업로드-기능-구현

--- a/src/main/resources/static/ckeditor5-39.0.1-q2hcooty1ujs/sample/styles.css
+++ b/src/main/resources/static/ckeditor5-39.0.1-q2hcooty1ujs/sample/styles.css
@@ -159,7 +159,7 @@ body[data-editor='DecoupledEditor'] .sidebar {
 	border: 1px solid hsl(0, 0%, 77%);
 	border-bottom: 0;
 	background: hsl(0, 0%, 98%);
-	padding: var(--ck-spacing-small);
+	/*padding: var(--ck-spacing-small);*/
 
 	/* Make `border-bottom` as `box-shadow` to not overlap with the editor border. */
 	box-shadow: 0 1px 0 0 hsl(0, 0%, 77%);
@@ -175,7 +175,7 @@ body[data-editor='DecoupledEditor'] .sidebar {
 
 .presence .ck.ck-presence-list__counter {
 	order: 2;
-	margin-left: var(--ck-spacing-large)
+	/*margin-left: var(--ck-spacing-large)*/
 }
 
 /* --------- REAL TIME COLLABORATION FEATURES (SHARE TOPBAR CONTAINER) --------------------------------------------- */
@@ -204,7 +204,7 @@ body[data-editor='InlineEditor'] .collaboration-demo__row {
 
 .collaboration-demo__topbar {
 	background: #fff;
-	border: 1px solid var(--ck-color-toolbar-border);
+	/*border: 1px solid var(--ck-color-toolbar-border);*/
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -242,7 +242,7 @@ body[data-editor='InlineEditor'] .collaboration-demo__row {
 	min-width: 220px;
 	margin: 0 10px;
 	border-radius: 4px;
-	border: 1px solid var(--ck-color-toolbar-border)
+	/*border: 1px solid var(--ck-color-toolbar-border)*/
 }
 
 .collaboration-demo__share button,
@@ -330,8 +330,8 @@ body[data-editor='InlineEditor'] .collaboration-demo__row {
     position: relative;
     min-width: 310px;
     overflow: hidden;
-    background: var(--ck-color-toolbar-background);
-    border: 1px solid var(--ck-color-toolbar-border);
+    /*background: var(--ck-color-toolbar-background);*/
+    /*border: 1px solid var(--ck-color-toolbar-border);*/
     margin-left: -1px;
 }
 
@@ -353,7 +353,7 @@ body[data-revision-history='true'] .ck.ck-pagination-view-line::after {
 
 .document-outline-container .ck.ck-document-outline {
 	min-height: 100%;
-	border: 1px solid var(--ck-color-base-border);
+	/*border: 1px solid var(--ck-color-base-border);*/
 	background-color: hsl(0, 0%, 96%);
 }
 
@@ -468,8 +468,8 @@ main .message h2 {
 	user-select: none;
 	border-radius: 4px;
 	transition: color .2s ease-in-out,background-color .2s ease-in-out,border-color .2s ease-in-out,opacity .2s ease-in-out;
-	background-color: var(--ck-sample-color-button-blue);
-	border-color: var(--ck-sample-color-button-blue);
+	/*background-color: var(--ck-sample-color-button-blue);*/
+	/*border-color: var(--ck-sample-color-button-blue);*/
 	color: var(--ck-sample-color-white);
 	display: inline-block;
 }
