--- a/src/main/resources/templates/include/headerNavFooter.html
+++ b/src/main/resources/templates/include/headerNavFooter.html
@@ -91,6 +91,6 @@
 
 <footer th:fragment="footer">
     <div id="footerWrap">
-        Copyright © OFFICE Corp. All Rights Reserved.
+        Copyright © ONE-TEAM Corp. All Rights Reserved.
     </div>
 </footer>
