--- a/src/main/resources/static/css/headerFooter.css
+++ b/src/main/resources/static/css/headerFooter.css
@@ -112,3 +112,16 @@
 .memberWrap a {
     font-size: 0.9em;
 }
+
+footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 30px;
+    line-height: 30px;
+    background-color: #333; /* 배경색 변경 */
+    color: white; /* 텍스트 색상 변경 */
+    text-align: center;
+    padding: 10px 0;
+}
