--- a/src/main/resources/static/css/user/loginForm.css
+++ b/src/main/resources/static/css/user/loginForm.css
@@ -1,184 +1,3 @@
-/*!* 로고 START *!*/
-/*#sectionWrap div.logo {*/
-/*    margin: 60px 0 35px;*/
-/*}*/
-/*#sectionWrap div.logo img {*/
-/*    max-width: 100px;*/
-/*    min-width: 100px;*/
-/*}*/
-/*!* 로고 END *!*/
-
-/*!* 로그인 폼 START *!*/
-/*#sectionWrap div.loginForm {*/
-/*    width: 492px;*/
-/*    margin: 0 auto;*/
-/*    border: 1px solid #dadada;*/
-/*    border-radius: 10px;*/
-/*    padding: 20px;*/
-/*}*/
-
-/*#sectionWrap div.loginForm ul {*/
-/*    width: 450px;*/
-/*    margin: 0 auto;*/
-/*}*/
-
-/*#sectionWrap div.loginForm li {*/
-/*    width: 150px;*/
-/*    border: 1px solid #dadada;*/
-/*    box-sizing: border-box;*/
-/*    padding: 10px;*/
-/*}*/
-
-/*#sectionWrap div.loginForm li:nth-child(1) {*/
-/*    border-radius: 5px 0 0 5px;*/
-/*}*/
-
-/*#sectionWrap div.loginForm li:nth-child(2) {*/
-/*    border-radius: 0;*/
-/*}*/
-
-/*#sectionWrap div.loginForm li:nth-child(3) {*/
-/*    border-radius: 0 5px 5px 0;*/
-/*}*/
-
-/*#sectionWrap div.loginForm li:hover {*/
-/*    background-color: rgba(200, 200, 200, .2);*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*#sectionWrap div.loginForm > input {*/
-/*    width: 410px;*/
-/*    border: 1px solid #dadada;*/
-/*    padding: 15px 20px;*/
-/*    font-size: 1.1em;*/
-/*}*/
-
-/*#sectionWrap div.loginForm > input[name=id] {*/
-/*    margin-top: 15px;*/
-/*    border-radius: 5px 5px 0 0;*/
-/*}*/
-
-/*#sectionWrap div.loginForm > input[name=password] {*/
-/*    border-radius: 0 0 5px 5px;*/
-/*}*/
-
-/*#sectionWrap div.loginForm > div {*/
-/*    width: 450px;*/
-/*    margin: 15px auto;*/
-/*    text-align: left;*/
-/*    font-size: .9em;*/
-/*    color: #5a5a5a;*/
-/*}*/
-
-/*#sectionWrap div.loginForm > div > button {*/
-/*    width: 450px;*/
-/*    margin-top: 22px;*/
-/*    color: #fff;*/
-/*    font-weight: bold;*/
-/*    background-color: #03c75a;*/
-/*    border: 0;*/
-/*    font-size: 1.5em;*/
-/*    padding: 10px 0;*/
-/*    border-radius: 6px;*/
-/*    cursor:pointer;*/
-/*}*/
-
-/*!* 로그인 폼 END *!*/
-
-/*!* 비밀번호 찾기, 아이디 찾기, 회원가입 STARD *!*/
-/*#sectionWrap div.findMember {*/
-/*    width: 450px;*/
-/*    margin: 20px auto 40px;*/
-/*    font-size: .9em;*/
-/*    color: rgba(0, 0, 0, .4);*/
-/*}*/
-
-/*#sectionWrap div.findMember a {*/
-/*    font-size: .95em;*/
-/*    color: rgba(0, 0, 0, .5);*/
-/*    margin: 0 5px;*/
-/*}*/
-/*!* 비밀번호 찾기, 아이디 찾기, 회원가입 END *!*/
-/*////////////////////////////////////////////////////////////////////////*/
-/*!* 로고 START *!*/
-/*#sectionWrap div.logo {*/
-/*    text-align: center; !* 로고를 가운데 정렬 *!*/
-/*    margin-top: 60px;*/
-/*}*/
-
-/*#sectionWrap div.logo img {*/
-/*    max-width: 100%; !* 로고 이미지가 부모 요소에 맞게 크기 조정 *!*/
-/*}*/
-/*!* 로고 END *!*/
-
-/*!* 로그인 폼 START *!*/
-/*#sectionWrap div.loginForm {*/
-/*    width: 450px; !* 폼의 너비를 조정 *!*/
-/*    margin: 0 auto; !* 가운데 정렬 *!*/
-/*    border: 1px solid #dadada;*/
-/*    border-radius: 10px;*/
-/*    padding: 20px;*/
-/*}*/
-
-/*#sectionWrap div.loginForm ul {*/
-/*    list-style: none; !* 목록 스타일 제거 *!*/
-/*    padding: 0;*/
-/*}*/
-
-/*#sectionWrap div.loginForm li {*/
-/*    width: 150px;*/
-/*    border: 1px solid #dadada;*/
-/*    box-sizing: border-box;*/
-/*    padding: 10px;*/
-/*    text-align: center; !* 텍스트 가운데 정렬 *!*/
-/*    cursor: pointer; !* 마우스 호버 시 포인터 모양 변경 *!*/
-/*}*/
-
-/*#sectionWrap div.loginForm li:hover {*/
-/*    background-color: rgba(200, 200, 200, .2);*/
-/*}*/
-
-/*#sectionWrap div.loginForm > input {*/
-/*    width: 100%;*/
-/*    border: 1px solid #dadada;*/
-/*    padding: 15px 20px;*/
-/*    font-size: 1.1em;*/
-/*    margin-bottom: 10px; !* 입력 요소 사이 간격 추가 *!*/
-/*    border-radius: 5px; !* 모든 입력 요소에 둥근 테두리 적용 *!*/
-/*}*/
-
-/*#sectionWrap div.loginForm > input[name=id],*/
-/*#sectionWrap div.loginForm > input[name=password] {*/
-/*    margin-top: 15px; !* 입력 요소 위 여백 추가 *!*/
-/*}*/
-
-/*#sectionWrap div.loginForm > div {*/
-/*    text-align: left;*/
-/*    font-size: .9em;*/
-/*    color: #5a5a5a;*/
-/*    margin-top: 10px; !* 안내 텍스트 위 여백 추가 *!*/
-/*}*/
-
-/*#sectionWrap div.loginForm > div > button {*/
-/*    width: 100%;*/
-/*    margin-top: 22px;*/
-/*    color: #fff;*/
-/*    font-weight: bold;*/
-/*    background-color: #03c75a;*/
-/*    border: 0;*/
-/*    font-size: 1.2em; !* 조금 크게 수정 *!*/
-/*    padding: 15px 0;*/
-/*    border-radius: 6px;*/
-/*    cursor: pointer;*/
-/*}*/
-
-/*!* 로그인 폼 END *!*/
-
-/*!* 비밀번호 찾기, 아이디 찾기, 회원가입 START *!*/
-/*#sectionWrap div.findMember {*/
-/*    text-align: center; !* 가운*/
-
-/* Reset some default browser styles */
 body, h1, h2, p, ul, li, button {
     margin: 0;
     padding: 0;
@@ -199,7 +18,7 @@ body {
     border-radius: 9px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 }
-
+/*!* 로고 START *!*/
 .logo {
     text-align: center;
     margin-bottom: 20px;
@@ -208,7 +27,9 @@ body {
 .logo img {
     max-width: 150px;
 }
+/* 로고 END */
 
+/*로그인 폼, radio 버튼 수정 START*/
 .loginForm label.loginRadio {
     margin-bottom: 20px;
 }
@@ -273,7 +94,9 @@ body {
     font-size: 1.2em;
     border-radius: 7px;
 }
+/*로그인 폼, radio 버튼 수정 END*/
 
+/* 비밀번호 찾기, 아이디 찾기, 회원가입 START */
 .findMember {
     text-align: center;
     font-size: 0.9em;
@@ -290,3 +113,4 @@ body {
 .findMember a:hover {
     text-decoration: underline;
 }
+/* 비밀번호 찾기, 아이디 찾기, 회원가입 END */
