--- a/src/main/resources/templates/Home.html
+++ b/src/main/resources/templates/Home.html
@@ -43,8 +43,7 @@
                         <button type="button" onclick="location.href='/user/member/loginForm';">Cozy Nest 로그인</button>
                         <span><a th:href="@{/user/member/findIDForm}">아이디 찾기</a></span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
                         <span><a th:href="@{/user/member/findPasswordForm}">비밀번호 찾기</a></span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
-                        <span><a th:href="@{/user/student/createAccountForm}">학생회원가입</a></span>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;
-                        <span><a th:href="@{/user/parents/createAccountForm}">학부모회원가입</a></span>
+                        <span><a th:href="@{/user/member/beforeCreateAccount}">회원가입</a></span>
                     </form>
                 </div>
                 <div class="point-container">
