--- a/src/main/resources/templates/board/modifyContentForm.html
+++ b/src/main/resources/templates/board/modifyContentForm.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" th:href="@{/css/writeContentForm.css}">
 
 <!--  <script th:replace="~{/include/use_console.html::js}" type="text/javascript"></script>-->
+  <script src="/ckeditor5-39.0.1-q2hcooty1ujs/build/ckeditor.js"></script>
   <script th:src="@{/js/board/modifyContentConfirm.js}" type="text/javascript"></script>
 </head>
 <body>
@@ -68,10 +69,11 @@
             </a>
           </ul>
         </div>
+        <!--첨부파일 유효성 검사 START-->
         <script>
-          var maxFiles = 5; // 최대 첨부 파일 개수
-          var maxFileSize = 25600000; // 최대 파일 크기 (25MB)
-          var selectedFiles = []; // 선택한 파일 목록
+          var maxFiles = 5;                               // 최대 첨부 파일 개수
+          var maxFileSize = 25600000;                     // 최대 파일 크기 (25MB)
+          var selectedFiles = [];                         // 선택한 파일 목록
           var fileInput = document.getElementById("fileInput");
           var uploadFileList = document.getElementById("uploadFileList");
 
@@ -123,6 +125,7 @@
             return parseFloat((bytes / Math.pow(k, i)).toFixed(dm)) + ' ' + sizes[i];
           }
         </script>
+        <!--첨부파일 유효성 검사 END-->
         <div class="button-container">
           <input type="submit" value="수정" onclick="modifyContentConfirm()">
           <input type="submit" value="삭제" onclick="deleteContentConfirm()">
@@ -134,14 +137,39 @@
 
 </section>
 
-<script src="/webjars/ckeditor/4.16.1/full/ckeditor.js"></script>
-
-<script th:inline="javascript">
-  // CKEDITOR.replace('editor');
-  CKEDITOR.replace( 'editor', {
-    filebrowserUploadUrl: '/boardController/writeContentConfirm'
-  });
+<!--  CK Editor START-->
+<script>
+  ClassicEditor.create(document.querySelector('#editor'),{
+    toolbar: [
+      'exportPdf', 'exportWord', '|',
+      'heading', '|',
+      'alignment', 'bold', 'italic', 'underline', 'fontSize', '|',
+      'fontColor', 'fontBackgroundColor', 'highlight', '|',
+      'imageUpload', 'insertTable', 'link', 'undo', 'redo'
+    ],
+    language: "ko",
+    ckfinder : {
+      uploadUrl: "/image/upload"
+    }
+  })
+  // .then(editor => {
+  //   ('#submitBtn').click(function () {
+  //     writePost(editor);
+  //   })
+  // })
+  // .error(error => {
+  //   console.log(error);
+  // })
 </script>
+<style>
+  .ck-editor__editable {
+    height: 600px;
+  }
+  .ck-content {
+    font-size: 13px;
+  }
+</style>
+<!--CK Editor END-->
 
 </body>
 </html>
