--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -3,6 +3,7 @@
 <head>
     <title th:replace="~{/include/title.html::title}"></title>
 
+    <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
     <link rel="stylesheet" th:href="@{/css/user/loginForm.css}">
 
@@ -15,7 +16,7 @@
     <div id = "sectionWrap">
         <div class="logo">
             <a th:href="@{/}">
-            <img src="/imgs/no_background_logo_test.png" >
+                <img src="/imgs/no_background_logo_test.png" >
             </a>
         </div>
         <form th:action="@{/user/student/loginConfirm}" method="post" id = "loginForm" name = "loginForm">
@@ -40,7 +41,7 @@
             </div>
             <!-- 비밀번호 찾기, 아이디 찾기, 회원가입 -->
             <div class="findMember">
-                <a href="#none">회원가입</a>
+                <a th:href="@{/user/member/beforeCreateAccount}">회원가입</a>
                 |
                 <a th:href="@{/user/member/findIDForm}">아이디 찾기</a>
                 |
