--- a/src/main/resources/templates/user/member/findIDForm.html
+++ b/src/main/resources/templates/user/member/findIDForm.html
@@ -1,52 +1,74 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}">
+    <title th:replace="~{/include/title.html::title}"></title>
 
-    </title>
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+    <link rel="stylesheet" th:href="@{/css/user/findIDForm.css}">
+
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/findIDFormJs.html::js}" type="text/javascript"></script>
 
-
 </head>
 <body>
-
-<header th:replace="~{/include/headerNavFooter.html::header}">
-</header>
-
-
-<nav th:replace="~{/include/headerNavFooter.html::nav}">
-
-</nav>
-
 <section>
     <div id="sectionWrap">
-        <div class="word">
-            아이디 찾기
+        <div class="logo">
+            <a th:href="@{/}">
+                <img src="/imgs/no_background_logo_test.png" >
+            </a>
+            <br>
+            <div class="title">
+                아이디 찾기
+            </div>
+            <br>
+            <div class="explanation">
+                아이디는 가입하신 휴대전화를 통해 찾으실 수 있습니다.
+            </div>
         </div>
-        <div class="findIDForm">
-            <form th:action="@{/user/member/findIDConfirm}" method="post" name="findIDForm">
-                <label><input type="radio" name="student" value="학생" checked="checked">학생</label>&nbsp;
-                <label><input type="radio" name="parents" value="학부모">학부모</label><br>
-                이름
-                <input type="text" name="name" placeholder="이름을 입력하세요"><br>
-                핸드폰 번호
-                <select name="phone1">
-                    <option value="">---선택해주세요---</option>
-                    <option value="010">010</option>
-                    <option value="011">011</option>
-                    <option value="016">016</option>
-                    <option value="019">019</option>
-                </select>&nbsp; - &nbsp;
-                <input type="text" name="phone2" oninput="filterKey();"> &nbsp; - &nbsp;
-                <input type="text" name="phone3" oninput="filterKey();">&nbsp;
-                <input type="button" value="인증번호 발송">
-                <span class="authInput"></span>
-                <span id="timer"></span><br>
-                <input type="button" value="아이디 찾기">
-                <input type="reset" value="reset">
-            </form>
-        </div>
+        <form th:action="@{/user/member/findIDConfirm}" method="post" id="findIDForm" name="findIDForm">
+            <div class="findIDForm">
+                <label class="findIDRadio">
+                    <input type="radio" name="student" value="학생" checked="checked">
+                    <span>학생</span>
+                </label>
+                <label class="findIDRadio">
+                    <input type="radio" name="parents" value="학부모">
+                    <span>학부모</span>
+                </label>
+                <br>
+                <div class="findIDFormFlex">
+                    <span>NAME</span>
+                    <input type="text" name="name" placeholder="이름을 입력하세요"><br>
+                </div>
+                <div class="findIDFormFlex cellPhone">
+                    <span>H.P</span>
+                    <select name="phone1">
+                        <option value="">선택</option>
+                        <option value="010">010</option>
+                        <option value="011">011</option>
+                        <option value="016">016</option>
+                        <option value="019">019</option>
+                    </select>-
+                    <input type="text" name="phone2" oninput="filterKey();">-
+                    <input type="text" name="phone3" oninput="filterKey();">
+                    <input class="sendBtn" type="button" value="인증번호">
+                </div>
+                <span class="authInput">
+
+                </span>
+                <span id="timer">
+
+                </span><br>
+                <input class="confirm" type="button" value="확인">
+            </div>
+            <div class="findMember">
+                <a th:href="@{/user/member/loginForm}">로그인</a>
+                |
+                <a th:href="@{/user/member/findPasswordForm}">비밀번호 찾기</a>
+            </div>
+        </form>
     </div>
 </section>
 
