--- a/src/main/resources/templates/user/member/findPasswordForm.html
+++ b/src/main/resources/templates/user/member/findPasswordForm.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:replace="~{/include/title.html::title}">
+    <title th:replace="~{/include/title.html::title}"></title>
 
-    </title>
+    <link rel="stylesheet" th:href="@{/css/common.css}">
+    <link rel="stylesheet" th:href="@{/css/headerFooter.css}">
+
     <script th:replace="~{/include/common_js.html::jquery_cdn}" type="text/javascript"></script>
     <script th:replace="~{/include/findPasswordFormJs.html::js}" type="text/javascript"></script>
 
@@ -42,9 +44,11 @@
                 </select>&nbsp; - &nbsp;
                 <input type="text" name="phone2" oninput="filterKey();"> &nbsp; - &nbsp;
                 <input type="text" name="phone3" oninput="filterKey();">&nbsp;
-                <input type="button" value="인증번호 발송">
-                <span class="authInput"></span>
-                <span id="timer"></span><br>
+                <span class="authInput">
+                    <input type="button" value="인증번호 발송">
+                </span>
+                    <span id="timer"></span>
+                <br>
                 <input type="button" value="비밀번호 찾기">
                 <input type="reset" value="reset">
             </form>
